--- a/res/layout/item_grid.xml
+++ b/res/layout/item_grid.xml
@@ -11,7 +11,7 @@
         android:paddingLeft="2dp"
         android:paddingTop="2dp"
         android:src="@drawable/ic_delete"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
     <RelativeLayout
         android:layout_width="match_parent"
